Report generation implemented, lang files added

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,19 @@
             <version>3.43.0.0</version>
         </dependency>
 
+        <!-- FreeMarker for templating -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.31</version>
+        </dependency>
+
+        <!-- OpenHTMLToPDF (uses PDFBox) -->
+        <dependency>
+            <groupId>com.openhtmltopdf</groupId>
+            <artifactId>openhtmltopdf-pdfbox</artifactId>
+            <version>1.0.10</version>
+        </dependency>
     </dependencies>
 
     <build>
