--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>elanik-reporter</artifactId>
+    <artifactId>elanik-report-studio</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -82,7 +82,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <finalName>elanik-reporter-all</finalName>
+                            <finalName>elanik-report-studio-all</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.example.App</mainClass>
